# anakin-language-server

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  NEWS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
anakinls/: __main__.py  _version.py  server.py  version.py
tests/: test_server.py
