[project]
name = "anakin-language-server"
dynamic = ["version"]
description = "Yet another Jedi Python language server"
readme = "README.md"
requires-python = ">=3.7.16"
dependencies = [
  "jedi>=0.19.0",
  "pygls>=1.3,<1.4",
  "pyflakes~=2.2",
  "pycodestyle~=2.5",
  "yapf~=0.30",
]
license = {file = "LICENSE"}
authors = [{name = "Andrii Kolomoiets", email = "andreyk.mad@gmail.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

[project.urls]
"Homepage" = "https://github.com/muffinmad/anakin-language-server"
"Bug Reports" = "https://github.com/muffinmad/anakin-language-server/issues"
"Source" = "https://github.com/muffinmad/anakin-language-server"

[project.scripts]
anakinls = "anakinls.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "anakinls.version.__version__"}

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true
